@@ -84,6 +84,7 @@ TESTS =						\
   cp/link-heap					\
   tail-2/inotify-hash-abuse			\
   tail-2/inotify-hash-abuse2			\
+  tail-2/F-vs-missing				\
   tail-2/F-vs-rename				\
   tail-2/inotify-rotate				\
   chmod/no-x					\
